# my-domain-desktop

./: README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fcm.rs  lib.rs  main.rs
