[package]
name = "my-domain"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_domain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mdcore = { path = "../../core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = { version = "0.5", features = ["all"] }
uuid = { version = "1", features = ["v4"] }
machine-uid = "0.5"
gethostname = "0.5"
if-addrs = "0.13"
tungstenite = "0.24"
arboard = "3"
# Native FCM receiver: simulates an Android/web client to obtain an FCM token
# and receive data messages over a persistent MTalk connection (no browser /
# service worker needed). Blocking (reqwest blocking), so it runs in its own
# thread alongside the Engine's blocking loops.
fcm_receiver_rs = "0.1.1"

